<resources>
    <string name="app_name">CarGuide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_first_fragment">hello_first_fragment</string>
    <string name="next">next</string>
    <string name="home_fragment_label">車禍保險流程</string>
    <string name="photo_fragment_label">車損拍攝</string>
    <string name="hello_Photo_fragment">hello_Photo_fragment</string>
    <string name="previous">previous</string>
    <string name="action_settings">settings</string>
    <string name="Yeshurt">有傷亡</string>
    <string name="Nohurt">無傷亡</string>
    <string name="NoorYeshunt">有無傷亡?</string>
    <string name="preview_area">Preview Area</string>
    <string name="capture">Capture</string>
    <string name="todo">TODO</string>
    <string name="google_map">google_map</string>
    <string name="Call_fragment_label">車禍引導</string>
    <string name="Login_fragment_label">登入</string>
    <string name="strike1">拍攝撞擊點</string>
    <string name="strike2">拍攝車前方</string>
    <string name="strike3">拍攝車後方</string>
    <string name="strike4">拍攝車左方</string>
    <string name="strike5">拍攝車右方</string>
    <string name="video_call">視訊報案</string>
    <string name="call_119">119</string>
    <string name="call_110">110</string>
    <string name="next_call">下一步</string>
    <string name="button_start_guide">車輛引導</string>
    <string name="button_login">登入</string>
    <string name="login">登入</string>
    <string name="register">註冊</string>
    <string name="cancel">取消</string>
    <string name="photo_ok">確認</string>

    <string name="menu_perpetrator">肇事者資料</string>
    <string name="menu_insurance">保險專員</string>
    <string name="menu_callfamily">聯絡家屬</string>
    <string name="menu_history">歷史車禍案件</string>
    <string name="menu_editprofile">編輯個人資料</string>
    <string name="menu_home">首頁</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Register_fragment_label">註冊</string>
    <string name="men">男</string>
    <string name="women">女</string>
</resources>