<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_000000"
    tools:context=".PhotoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <Button
            android:id="@+id/strike1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="50dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            style="@style/Widget.Material3.Button.Icon"
            android:backgroundTint="@color/layout_gray_525252"
            app:icon="@drawable/ic_baseline_crop_free_24"
            android:textSize="16sp"
            android:text="@string/strike1" />

        <Button
            android:id="@+id/strike2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.Icon"
            android:paddingRight="50dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="16sp"
            app:icon="@drawable/ic_baseline_arrow_circle_up_24"
            android:backgroundTint="@color/layout_gray_525252"
            android:layout_marginTop="20dp"
            android:text="@string/strike2" />

        <Button
            android:id="@+id/strike3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.Icon"
            android:paddingRight="50dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="16sp"
            app:icon="@drawable/ic_baseline_arrow_circle_down_24"
            android:backgroundTint="@color/layout_gray_525252"
            android:layout_marginTop="20dp"
            android:text="@string/strike3" />

        <Button
            android:id="@+id/strike4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.Icon"
            android:backgroundTint="@color/layout_gray_525252"
            android:layout_marginTop="20dp"
            android:paddingRight="50dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="16sp"
            app:icon="@drawable/arrow_circle_left_fill0_wght400_grad0_opsz48"
            android:text="@string/strike4" />

        <Button
            android:id="@+id/strike5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.Icon"
            android:paddingRight="50dp"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:backgroundTint="@color/layout_gray_525252"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            app:icon="@drawable/arrow_circle_right_fill0_wght400_grad0_opsz48"
            android:text="@string/strike5" />

        <Button
            android:id="@+id/next_perpetrator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/layout_gray_383838"
            android:text="@string/next" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>