<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tabLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="bottom">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/cell_110"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="190dp"
            android:layout_height="90dp"
            android:backgroundTint="@color/layout_gray_383838"
            android:drawableTint="#E87676"
            android:paddingLeft="30dp"
            android:text="@string/call_110"
            android:textColor="#E87676"
            android:textSize="22sp"
            app:icon="@drawable/ic_baseline_call_24_red" />

        <Button
            android:id="@+id/cell_119"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="190dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/layout_gray_383838"
            android:paddingLeft="30dp"
            android:text="@string/call_119"
            android:textColor="#D8FFCA"
            android:textSize="22sp"
            app:icon="@drawable/ic_baseline_call_24_green" />

        <Button
            android:id="@+id/video_call"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="190dp"
            android:layout_height="90dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="130dp"
            android:backgroundTint="@color/layout_gray_383838"
            android:paddingLeft="30dp"
            android:text="@string/video_call"
            android:textSize="20sp"
            app:icon="@drawable/ic_baseline_video_call_24" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/call_cancel"
            style="@style/Widget.Material3.Button.Icon"
            android:background="#00000000"
            app:icon="@drawable/ic_baseline_cancel_24"
            app:iconSize="35dp"
            app:iconGravity="textStart"
            android:padding="0dp"
            app:iconPadding="0dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"/>
    </LinearLayout>

</RelativeLayout>