<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background_222222"
    tools:context=".CallFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="25dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_baseline_car_crash_24" />

            <TextView
                android:id="@+id/textview_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NoorYeshunt"
                android:textSize="45sp"
                android:textStyle="bold"
                android:textColor="@color/login_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="車禍發生後請移動至安全區域" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_Yeshurt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/layout_gray_525252"
                android:insetLeft="20dp"
                android:insetTop="20dp"
                android:insetRight="20dp"
                android:insetBottom="20dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:textSize="25sp"
                android:text="@string/Yeshurt"
                style="@style/Widget.Material3.Button.Icon"
                app:icon="@drawable/ic_baseline_local_hospital_24"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_Nohunt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/layout_gray_525252"
                android:insetLeft="20dp"
                android:insetTop="20dp"
                android:insetRight="20dp"
                android:insetBottom="20dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"
                android:textSize="25sp"
                style="@style/Widget.Material3.Button.Icon"
                app:icon="@drawable/ic_baseline_how_to_reg_24"
                android:text="@string/Nohurt"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="right"
                android:backgroundTint="@color/layout_gray_525252"
                android:text="@string/next_call" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>